--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,7 @@
 
         <ul class="top-bar-section">
           <% if current_user.present? %>
-            <li>Signed in as <%= current_user.username %></a></li>
+            <li><%= current_user.username %></a></li>
             <li><a href="/sign_out">Sign Out</a></li>
           <% else %>
             <li><a href="/auth/github">Sign In</a></li>
